--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Futura;
+}
+
 .imgbox {
     margin: 10px;
     font-family: Futura;
@@ -49,4 +53,9 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+input {
+    height: 30px;
+    border-radius: 5px;
 }
